# gnatGPT

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
docs/: project_instructions.md  project_reference.md
src/: attention.py  block.py  config.py  dataset.py  embeddings.py  ffn.py  generate.py  model.py  multi_head_attn.py  test_block.py  test_data.py  test_model.py  test_multi_head_attn.py  tokenizer.py  train.py
